--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 django_website/web-venv/
 django_website/django_website/settings.py
+django_website/*/__pycache__
+django_website/*/migrations
+
 *.pyc
 
 .vscode
