--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ django_website/web-venv/
 django_website/django_website/settings.py
 django_website/*/__pycache__
 django_website/*/migrations
+django_website/media/
 
 *.pyc
 
